fix(top-bar): changing horizontal scrolling

--- a/src/pages/Main/_main.scss
+++ b/src/pages/Main/_main.scss
@@ -1,15 +1,16 @@
 .playlists-top{
-  position: absolute;
+  height: 20%;
+  padding: 0.5rem;
+  margin: 0;
+  margin-bottom:0.5rem;
   display: flex;
-  flex-direction: column-reverse;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  transform: rotate(90deg) translate(0, -100vw);
-  transform-origin: left top;
-  height:100vw;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-y: hidden;
+  overflow-x: scroll;
   &::-webkit-scrollbar{
     background-color: rgba(26, 7, 7, 0.26);
-    width: 8px;
+    height: 8px;
   }
   &::-webkit-scrollbar-thumb{
     background-color: rgb(24, 5, 5);
@@ -17,11 +18,10 @@
 }
   
 .playlist-item{
-  width: 138px;
-  // height: 130px;
-  padding-top: 10px;
-  transform: rotate(-90deg) translateX(-100px);
-  transform-origin: left top;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  background-color: rgba(65, 190, 58, 0.055);
+  border-radius: 1rem;
   cursor: pointer;
   .playlist-cover{
     width: 90px;
@@ -29,6 +29,7 @@
   }
   .playlist-title{
     max-width: 90px;
+    text-align: center;
     white-space: nowrap; 
     overflow: hidden;
     text-overflow: ellipsis;
@@ -36,17 +37,13 @@
 }
 
 .tracklist-container{
-  position: absolute;
-  top: 150px;
-  right:0;
-  left:0;
-  bottom: 0;
   display: flex;
   flex-direction: row;
+  height: calc(80% - 1.5rem);
 }
 .tracklist{
   width: 50%;
-  padding: 2rem;
+  padding: 1rem;
   overflow-y: scroll;
   overflow-x: hidden;
   background: rgba(0, 0, 0, 0.5);
