--- a/src/pages/_app.scss
+++ b/src/pages/_app.scss
@@ -14,7 +14,9 @@ body {
   color: white;
   overflow: hidden;
 }
-
+ul{
+  list-style: none;
+}
 .app{
   width: 100vw;
   height: 100vh;
