--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,11 @@
+/* colors */
+
 $main-color: #8bffff;
 
 $main-bgcolor: #050124;
 
 $main-border: 1px solid rgba(235, 233, 233, 0.282);
+
+/* sizes */
+
+$top-bar-height: 150px;
